feat: csomag létrehozás és megjelenítésük táblázatban
